--- a/RockPaperScissors2.0/Base.lproj/Main.storyboard
+++ b/RockPaperScissors2.0/Base.lproj/Main.storyboard
@@ -71,12 +71,15 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="giD-ur-jRx">
-                                <rect key="frame" x="137" y="340" width="46" height="30"/>
+                                <rect key="frame" x="117" y="340" width="86" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Start">
+                                <state key="normal" title="Start Game">
                                     <color key="titleColor" red="0.2458050843" green="1" blue="0.25651361029999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="startButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Fe2-Ge-Ujc"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -88,6 +91,7 @@
                         <outlet property="playerHandLabel" destination="TxK-Fq-8o1" id="B7s-Lq-wR7"/>
                         <outlet property="rockButtonOutlet" destination="JKM-bP-OSl" id="yk9-Pr-vaY"/>
                         <outlet property="scissorsButtonOutlet" destination="8BF-gW-q8h" id="pg8-tO-5Lp"/>
+                        <outlet property="startButtonOutlet" destination="giD-ur-jRx" id="oh4-rF-2Aa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
